[tool.poetry]
name = "assort-health-takehome"
version = "0.1.0"
description = "Assort Health AI Chat Agent Take Home Assignment"
authors = ["Eric Hurchey <eric.hurchey@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openai = "^2.3.0"
python-dotenv = "^1.2.1"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

