[tool.poetry]
name = "health-ai-chat-agent"
version = "0.1.0"
description = "Health AI Chat Agent"
authors = ["Eric Hurchey <eric.hurchey@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openai = "^2.3.0"
python-dotenv = "^1.2.1"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

